# ring-fit-adventure-tracker

./: .gitignore  Cargo.toml  README.md
assets/: translations.json
src/: app.rs  db.rs  lang.rs  lib.rs  main.rs  menu.rs  settings.rs  skills.rs  workout.rs
